src/components/Player/Player.module.scss
.dragHandle {
  display: flex;
  appearance: none;
  border: none;
  @include inner-border(var(--color-border-default-default));

  position: absolute;
  top: 0;
  left: 50%;
  padding: 2px 24px 8px;
  transform: translateX(-50%) translateY(0);
  z-index: 2;

  background-color: var(--color-background-default-default);
  border-top-right-radius: var(--radii-small);
  border-top-left-radius: var(--radii-small);
  transition: var(--transition-fast);
  transition-property: background-color, transform;
  cursor: grab;
  color: var(--color-core-neutral-600);

  &.dragHandleIsDragging {
    cursor: grabbing;
  }
}

.dragHandlePlaceholder {
  position: absolute;
  top: 0;
  left: 50%;
  height: 24px;
  width: 68px;
  transform: translateX(-50%) translateY(-100%);
  z-index: 1;
  cursor: grab;
}

.wrapper {
  --translate-x: calc(-50% - 12px);
  --translate-y: calc(100vh - 100% - 12px);

  overflow: visible;
  position: absolute;
  max-width: 1424px;
  width: calc(100% - 24px);
  margin: 0 12px;
  height: 96px;
  left: 50%;
  transform: translateX(var(--translate-x)) translateY(var(--translate-y));
  right: 12px;
  z-index: var(--z-index-player);
  transition: var(--transition-medium) transform, var(--transition-slow) opacity;
  opacity: 0;

  &.wrapperIsDragging {
    transition: 0s transform, var(--transition-slow) opacity;
  }

  &.isSpringing {
    transition: cubic-bezier(0, 0.405, 0, 1.285) var(--motion-timing-slow) transform, var(--transition-slow) opacity;
  }

  &.isCollapsed {
    --translate-y: calc(100vh - 12px);
  }

  &.isVisible {
    opacity: 1;
  }
}

.content {
  display: flex;
  @include inner-border(var(--color-border-muted-default), 1px);
  background: var(--color-background-muted-default);
  border-radius: var(--radii-medium);
  width: 100%;
  height: 100%;
  z-index: 3;
}

.section {
  padding: 24px;
  box-shadow: inset -1px 0 0 0 var(--color-border-muted-default);

  &:last-child {
    box-shadow: none;
  }

  &.middle {
    flex: 1;
  }
}

.buttonsWrapper {
  display: flex;
  gap: 8px;
}

.grabbingWrapper {
  z-index: var(--z-index-player-grabbing-container);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: grabbing;
}

.wrapper.isCollapsed .dragHandle,
.wrapper:hover .dragHandle {
  transform: translateX(-50%) translateY(calc(-100% + 6px));
}

.dragHandlePlaceholder:hover ~ .dragHandle,
.wrapper:hover .dragHandle:hover,
.wrapper.isCollapsed .dragHandle:hover,
.wrapper.wrapperIsDragging .dragHandle,
.dragHandle:focus-visible,
.dragHandle:hover {
  transform: translateX(-50%) translateY(calc(-100%));
  background-color: var(--color-background-strong-default);
}

